Added COG bibliography and copied introduction section.

--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -22,6 +22,21 @@
 
 % Pages are numbered in submission mode, and unnumbered in camera-ready
 \ifcvprfinal\pagestyle{empty}\fi
+
+%% User's macros %%
+\usepackage{cleveref}
+\crefname{figure}{Figure}{Figures}
+\crefname{table}{Table}{Tables}
+\crefname{appendix}{Appendix}{Appendices}
+
+\newcommand{\tk}[1]{\textcolor{red}{TK: #1}}
+\newcommand{\ao}[1]{\textcolor{green}{AO: #1}}
+\newcommand{\tsj}[1]{\textcolor{magenta}{TSJ: #1}}
+\newcommand{\va}[1]{\textcolor{blue}{VM: #1}}
+
+
+%%%%%%%%%%%%%%%
+
 \begin{document}
 
 %%%%%%%%% TITLE
