--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -65,6 +65,8 @@ Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
 
 \input{related_work}
 
+\input{model}
+
 \input{experiments}
 
 \input{summary}
