--- a/cvpr_submission/related_work.tex
+++ b/cvpr_submission/related_work.tex
@@ -1,7 +1,1 @@
-\section{Introduction}
-
-\subsection{Subsection 1}
-
-\subsection{Subsection 2}
-
-\subsection{Subsection 3}
+\section{Related work}
