intro + references - core dump

--- a/cvpr_submission/bibliography.bib
+++ b/cvpr_submission/bibliography.bib
@@ -1,5 +1,137 @@
 % Encoding: UTF-8
 
+@article{pan2009survey,
+	title={A survey on transfer learning},
+	author={Pan, Sinno Jialin and Yang, Qiang},
+	journal={IEEE Transactions on knowledge and data engineering},
+	volume={22},
+	number={10},
+	pages={1345--1359},
+	year={2009},
+	publisher={IEEE}
+}
+
+
+@article{weiss2016survey,
+	title={A survey of transfer learning},
+	author={Weiss, Karl and Khoshgoftaar, Taghi M and Wang, DingDing},
+	journal={Journal of Big data},
+	volume={3},
+	number={1},
+	pages={9},
+	year={2016},
+	publisher={SpringerOpen}
+}
+
+
+
+@inproceedings{deng2009imagenet,
+	title={Imagenet: A large-scale hierarchical image database},
+	author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+	booktitle={2009 IEEE conference on computer vision and pattern recognition},
+	pages={248--255},
+	year={2009},
+	organization={Ieee}
+}
+
+@article{huh2016makes,
+	title={What makes ImageNet good for transfer learning?},
+	author={Huh, Minyoung and Agrawal, Pulkit and Efros, Alexei A},
+	journal={arXiv preprint arXiv:1608.08614},
+	year={2016}
+}
+
+@inproceedings{kornblith2019better,
+	title={Do better imagenet models transfer better?},
+	author={Kornblith, Simon and Shlens, Jonathon and Le, Quoc V},
+	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+	pages={2661--2671},
+	year={2019}
+}
+
+
+@inproceedings{zamir2018taskonomy,
+	title={Taskonomy: Disentangling task transfer learning},
+	author={Zamir, Amir R and Sax, Alexander and Shen, William and Guibas, Leonidas J and Malik, Jitendra and Savarese, Silvio},
+	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+	pages={3712--3722},
+	year={2018}
+}
+
+
+@article{iglovikov2018ternausnet,
+	title={Ternausnet: U-net with vgg11 encoder pre-trained on imagenet for image segmentation},
+	author={Iglovikov, Vladimir and Shvets, Alexey},
+	journal={arXiv preprint arXiv:1801.05746},
+	year={2018}
+}
+
+@article{kornuta2019leveraging,
+	title={Leveraging Medical Visual Question Answering with Supporting Facts},
+	author={Kornuta, Tomasz and Rajan, Deepta and Shivade, Chaitanya and Asseman, Alexis and Ozcan, Ahmet S},
+	journal={arXiv preprint arXiv:1905.12008},
+	year={2019}
+}
+
+
+@inproceedings{johnson2017clevr,
+	title={Clevr: A diagnostic dataset for compositional language and elementary visual reasoning},
+	author={Johnson, Justin and Hariharan, Bharath and van der Maaten, Laurens and Fei-Fei, Li and Lawrence Zitnick, C and Girshick, Ross},
+	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+	pages={2901--2910},
+	year={2017}
+}
+
+
+@inproceedings{yang2018dataset,
+	title={A dataset and architecture for visual reasoning with a working memory},
+	author={Yang, Guangyu Robert and Ganichev, Igor and Wang, Xiao-Jing and Shlens, Jonathon and Sussillo, David},
+	booktitle={European Conference on Computer Vision},
+	pages={729--745},
+	year={2018},
+	organization={Springer}
+}
+
+
+@inproceedings{mikolov2013distributed,
+	title={Distributed representations of words and phrases and their compositionality},
+	author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+	booktitle={Advances in neural information processing systems},
+	pages={3111--3119},
+	year={2013}
+}
+
+
+@inproceedings{pennington2014glove,
+	title={Glove: Global vectors for word representation},
+	author={Pennington, Jeffrey and Socher, Richard and Manning, Christopher},
+	booktitle={Proceedings of the 2014 conference on empirical methods in natural language processing (EMNLP)},
+	pages={1532--1543},
+	year={2014}
+}
+
+@article{peters2018deep,
+	title={Deep contextualized word representations},
+	author={Peters, Matthew E and Neumann, Mark and Iyyer, Mohit and Gardner, Matt and Clark, Christopher and Lee, Kenton and Zettlemoyer, Luke},
+	journal={arXiv preprint arXiv:1802.05365},
+	year={2018}
+}
+
+@article{devlin2018bert,
+	title={Bert: Pre-training of deep bidirectional transformers for language understanding},
+	author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+	journal={arXiv preprint arXiv:1810.04805},
+	year={2018}
+}
+
+@article{wolf2019transformers,
+	title={Transformers: State-of-the-art Natural Language Processing},
+	author={Wolf, Thomas and Debut, Lysandre and Sanh, Victor and Chaumond, Julien and Delangue, Clement and Moi, Anthony and Cistac, Pierric and Rault, Tim and Louf, R{\'e}mi and Funtowicz, Morgan and others},
+	journal={arXiv preprint arXiv:1910.03771},
+	year={2019}
+}
+
+
 @article{hudson2018compositional,
 	author    = {Drew A. Hudson and Christopher D. Manning},
 	title     = {Compositional attention networks for machine reasoning},
