--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -8,6 +8,9 @@
 \usepackage{amssymb}
 
 % Include other packages here, before hyperref.
+\usepackage{booktabs}       % professional-quality tables
+\usepackage{multirow}
+\usepackage{adjustbox}
 \usepackage{lipsum} % for dummy text only
 
 % If you comment hyperref and then uncomment it, you should delete
