--- a/cvpr_submission/bibliography.bib
+++ b/cvpr_submission/bibliography.bib
@@ -1,5 +1,25 @@
 % Encoding: UTF-8
 
+@article{ripley1993statistical,
+	title={Statistical aspects of neural networks},
+	author={Ripley, Brian D},
+	journal={Networks and chaos—statistical and probabilistic aspects},
+	volume={50},
+	pages={40--123},
+	year={1993}
+}
+
+@article{warner1996understanding,
+	title={Understanding neural networks as statistical tools},
+	author={Warner, Brad and Misra, Manavendra},
+	journal={The american statistician},
+	volume={50},
+	number={4},
+	pages={284--293},
+	year={1996},
+	publisher={Taylor \& Francis Group}
+}
+
 @article{pan2009survey,
 	title={A survey on transfer learning},
 	author={Pan, Sinno Jialin and Yang, Qiang},
@@ -32,6 +52,13 @@
 	pages={248--255},
 	year={2009},
 	organization={Ieee}
+}
+
+@article{simonyan2014very,
+	title={Very deep convolutional networks for large-scale image recognition},
+	author={Simonyan, Karen and Zisserman, Andrew},
+	journal={arXiv preprint arXiv:1409.1556},
+	year={2014}
 }
 
 @article{huh2016makes,
@@ -80,16 +107,6 @@
 	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
 	pages={2901--2910},
 	year={2017}
-}
-
-
-@inproceedings{yang2018dataset,
-	title={A dataset and architecture for visual reasoning with a working memory},
-	author={Yang, Guangyu Robert and Ganichev, Igor and Wang, Xiao-Jing and Shlens, Jonathon and Sussillo, David},
-	booktitle={European Conference on Computer Vision},
-	pages={729--745},
-	year={2018},
-	organization={Springer}
 }
 
 
@@ -146,6 +163,49 @@
 	title = {{VQA}: {V}isual {Q}uestion {A}nswering}, 
 	booktitle = {International Conference on Computer Vision (ICCV)}, 
 	year = {2015}, 
+}
+
+@inproceedings{graves2013speech,
+	title={Speech recognition with deep recurrent neural networks},
+	author={Graves, Alex and Mohamed, Abdel-rahman and Hinton, Geoffrey},
+	booktitle={2013 IEEE international conference on acoustics, speech and signal processing},
+	pages={6645--6649},
+	year={2013},
+	organization={IEEE}
+}
+
+@inproceedings{krizhevsky2012imagenet,
+	title={Imagenet classification with deep convolutional neural networks},
+	author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+	booktitle={Advances in neural information processing systems},
+	pages={1097--1105},
+	year={2012}
+}
+
+
+@inproceedings{redmon2016you,
+	title={You only look once: Unified, real-time object detection},
+	author={Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={779--788},
+	year={2016}
+}
+
+
+@article{bahdanau2014neural,
+	title={Neural machine translation by jointly learning to align and translate},
+	author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+	journal={arXiv preprint arXiv:1409.0473},
+	year={2014}
+}
+
+
+@inproceedings{antol2015vqa,
+	title={Vqa: Visual question answering},
+	author={Antol, Stanislaw and Agrawal, Aishwarya and Lu, Jiasen and Mitchell, Margaret and Batra, Dhruv and Lawrence Zitnick, C and Parikh, Devi},
+	booktitle={Proceedings of the IEEE international conference on computer vision},
+	pages={2425--2433},
+	year={2015}
 }
 
 @InProceedings{haurilet2019s,
